--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,6 @@ eventlet>=0.33.0
 
 # Optional: For better performance on Windows
 # pip install intel-openmp mkl
+
+# System monitoring
+psutil>=5.9.0
